# game_controller_spl

./: .mergify.yml  CMakeLists.txt  README.md  package.xml
.github/workflows/: build_and_test_dev.yaml  build_and_test_foxy.yaml  build_and_test_iron.yaml
game_controller_spl/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
game_controller_spl/game_controller_spl/: game_controller_spl.py
game_controller_spl/game_controller_spl/rcgcd_14/: conversion.py
game_controller_spl/game_controller_spl/rcgcd_15/: conversion.py
game_controller_spl/game_controller_spl/rcgcrd_4/: conversion.py
game_controller_spl/test/: test_game_controller_spl.py
game_controller_spl/test/conversion/: test_conversion_rcgcd_14.py  test_conversion_rcgcd_15.py  test_conversion_rcgcrd_4.py
game_controller_spl_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
game_controller_spl_interfaces/msg/: RCGCD14.msg  RCGCD15.msg  TeamInfo14.msg  TeamInfo15.msg
gc_spl/: CHANGELOG.rst  package.xml  pyproject.toml  setup.cfg  setup.py
gc_spl/gc_spl/: gc_spl.py
gc_spl/gc_spl/rcgcd_14/: conversion.py  robocup_game_control_data.py
gc_spl/gc_spl/rcgcd_15/: conversion.py  robocup_game_control_data.py
gc_spl/gc_spl/rcgcrd_4/: conversion.py  robocup_game_control_return_data.py
gc_spl/test/: test_gc_spl.py
gc_spl/test/conversion/: test_conversion_rcgcd_14.py  test_conversion_rcgcd_15.py  test_conversion_rcgcrd_4.py
gc_spl_2022/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
gc_spl_2022/gc_spl_2022/: gc_spl.py
gc_spl_2022/test/: test_gc_spl.py
gc_spl_2023/: package.xml  setup.cfg  setup.py
gc_spl_2023/gc_spl_2023/: gc_spl.py
gc_spl_2023/test/: test_gc_spl.py
gc_spl_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
gc_spl_interfaces/msg/: RCGCD14.msg  RCGCD15.msg  TeamInfo14.msg  TeamInfo15.msg
gc_spl_master/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gc_spl_master/gc_spl_master/: gc_spl.py  robocup_game_control_data.py  robocup_game_control_return_data.py
gc_spl_master/include/gc_spl_master/: gc_spl.hpp  gc_spl_node.hpp
gc_spl_master/src/: gc_spl_node.cpp
gc_spl_master/test/: CMakeLists.txt  test_gc_spl.cpp  test_gc_spl.py
gc_spl_rcgcd_14/: CMakeLists.txt  package.xml
gc_spl_splsm_7/: CMakeLists.txt  package.xml
include/gc_spl/: gc_spl.hpp
rcgcd_14/: CMakeLists.txt  package.xml
rcgcd_14/msg/: RCGCD.msg  RobotInfo.msg  TeamInfo.msg
rcgcd_14_conversion/: package.xml  setup.cfg  setup.py
rcgcd_14_conversion/rcgcd_14_conversion/: conversion.py
rcgcd_14_conversion/test/: test_conversion.py
rcgcd_spl_14/: CHANGELOG.rst  CMakeLists.txt  package.xml
rcgcd_spl_14/msg/: RCGCD.msg  RobotInfo.msg  TeamInfo.msg
rcgcd_spl_14_conversion/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
rcgcd_spl_14_conversion/rcgcd_spl_14_conversion/: conversion.py  robocup_game_control_data.py
rcgcd_spl_14_conversion/test/: test_conversion.py
rcgcd_spl_15/: CMakeLists.txt  package.xml
rcgcd_spl_15/msg/: RCGCD.msg  RobotInfo.msg  TeamInfo.msg
rcgcd_spl_15_conversion/: package.xml  setup.cfg  setup.py
rcgcd_spl_15_conversion/rcgcd_spl_15_conversion/: conversion.py  robocup_game_control_data.py
rcgcd_spl_15_conversion/test/: test_conversion.py
rcgcrd_4/: CMakeLists.txt  package.xml
rcgcrd_4/msg/: RCGCRD.msg
rcgcrd_4_conversion/: package.xml  setup.cfg  setup.py
rcgcrd_4_conversion/rcgcrd_4_conversion/: conversion.py
rcgcrd_4_conversion/test/: test_conversion.py
rcgcrd_spl_4/: CHANGELOG.rst  CMakeLists.txt  package.xml
rcgcrd_spl_4/msg/: RCGCRD.msg
rcgcrd_spl_4_conversion/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
rcgcrd_spl_4_conversion/rcgcrd_spl_4_conversion/: conversion.py
rcgcrd_spl_4_conversion/test/: test_conversion.py
splsm_7/: CMakeLists.txt  package.xml
splsm_7/msg/: SPLSM.msg
