<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gc_spl</name>
  <version>4.0.0</version>
  <description>GameController-Robot communication in RoboCup SPL</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>gc_spl_interfaces</exec_depend>
  <exec_depend>python3-construct</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <deprecated>
      Please use game_controller_spl. gc_spl is deprecated as of J-turtle, and will be removed in K-turtle.
    </deprecated>
  </export>
</package>
