<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gc_spl_2022</name>
  <version>4.0.0</version>
  <description>GameController-Robot communication in RoboCup SPL at RoboCup2022</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcgcd_spl_14</exec_depend>
  <exec_depend>rcgcd_spl_14_conversion</exec_depend>
  <exec_depend>rcgcrd_spl_4</exec_depend>
  <exec_depend>rcgcrd_spl_4_conversion</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <deprecated>
      Please use game_controller_spl. gc_spl_2022 is deprecated as of J-turtle, and will be removed in K-turtle.
    </deprecated>
  </export>
</package>
