<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcgcrd_spl_4</name>
  <version>4.0.0</version>
  <description>RoboCup SPL GameController Return Data V4 ROS msg</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <deprecated>
      Please use game_controller_spl_interfaces. rcgcrd_spl_4 is deprecated as of J-turtle, and will be removed in K-turtle.
    </deprecated>
  </export>
</package>
